<resources>
    <string name="app_name">PDF to Image</string>
    <string name="select_image_format">Select Image Format</string>
    <string name="select_quality_of_image">Select Quality of Image</string>
    <string name="jpg">JPG</string>
    <string name="png">PNG</string>
    <string name="select_image_quality">Select Image Quality</string>
    <string name="ok">Low</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="select_pdf_file">Select PDF File</string>
    <string name="info">Info</string>
    <string name="save_location">Save Location</string>
    <string name="internal_storage_pictures_pdftoimg">Internal Storage/ Pictures/ PDFtoIMG</string>
    <string name="information">Information</string>
    <string name="png_uses_lossless">PNG uses lossless compression and hence the image takes more space.</string>
    <string name="jpeg_uses_lossy">JPEG uses lossy compression and hence takes less space.</string>
    <string name="theme">Theme</string>
    <string name="default_button">System</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="_2023_sathwik_dinesh">© 2025 Sathwik Dinesh</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="goto_internal_storage_pictures">Goto: Internal Storage / Pictures / PDFtoIMG /</string>
    <string name="conversion_cancelled">Conversion Cancelled</string>
    <string name="max_pages">Maximum pages allowed- 80</string>
    <string name="select_all">Select All</string>
    <string name="convert_to_image">Convert to Image</string>
    <string name="preview_image">Preview Image</string>
    <string name="pdf_page_preview">PDF page preview</string>

    <!-- <string name="goto_internal_storage_pictures">Go to Internal Storage/Pictures</string> -->

    <!-- <string name="ok">OK</string> -->
</resources>