<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".InfoActivity">

    <LinearLayout
        android:id="@+id/LayoutSaveLoc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/LayoutInformation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.85">

        <TextView
            android:id="@+id/textViewSaveLocH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_location"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewSaveLoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/internal_storage_pictures_pdftoimg"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutInformation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintBottom_toTopOf="@id/LayoutTheme"
        app:layout_constraintTop_toBottomOf="@id/LayoutSaveLoc">

        <TextView
            android:id="@+id/textViewInfoH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/png_uses_lossless"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jpeg_uses_lossy"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LayoutInformation">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/MaterialButtonToggleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/buttonDefault"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_button" />

            <Button
                android:id="@+id/buttonLight"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/light" />

            <Button
                android:id="@+id/buttonDark"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dark" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2023_sathwik_dinesh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LayoutTheme" />

</androidx.constraintlayout.widget.ConstraintLayout>